--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     # Use an Ubuntu machine for the build job. You can change this to macOS or Windows if needed.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     # Set environment variables for the build process
     env:
@@ -22,11 +22,11 @@ jobs:
     steps:
       # Step 1: Checkout the repository to access the code
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       # Step 2: Set up Node.js. Specify the version of Node.js you need for your Electron project.
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: '16'  # Update this if your project requires a different Node.js version
 
