--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: win-arm64-build
-          path: dist/win-arm64/  # 确保路径正确
+          path: 'build/Kodo Browser-win-arm64/'  # 确保路径正确
