--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-on-windows:
     runs-on: windows-latest  # 使用 Windows runner
+    needs: create_release
     steps:
       # Step 1: 检出代码
       - name: Checkout Code
