--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -5,28 +5,8 @@ on:
   [push, pull_request, workflow_dispatch]
 
 jobs:
-  create_release:
-    name: Create release for new version
-    runs-on: ubuntu-latest
-    needs: version_check
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Release Notes
-          draft: true
-          prerelease: false
-  brelease-linux-win-arm64:
+  build-on-windows:
     runs-on: windows-latest  # 使用 Windows runner
-    needs: create_release
     steps:
       # Step 1: 检出代码
       - name: Checkout Code
@@ -55,19 +35,22 @@ jobs:
       - name: Build
         run: ./node_modules/.bin/gulp win-arm64
 
-      # Step 7: 上传构建产物（可选）
-      - name: Upload Windows ARM64 Build
-        uses: actions/upload-artifact@v3
+      - name: release
+        uses: softprops/action-gh-release@v1
         with:
-          name: win-arm64-build
-          path: 'build/Kodo Browser-win-arm64/' # 确保路径正确
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+          draft: true
+          files: |
+            dist/*.exe
+            dist/*.zip
+            dist/*.dmg
+            dist/*.AppImage
+            dist/*.snap
+            dist/*.deb
+            dist/*.rpm
+            dist/*.tar.gz
+            dist/*.yml
+            dist/*.blockmap
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ./build/kodo-browser-win32-x64-${{ steps.vars.outputs.tag }}.zip
-          asset_name: kodo-browser-win32-x64-${{ steps.vars.outputs.tag }}.zip
-          asset_content_type: application/zip
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
 
