--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -35,21 +35,17 @@ jobs:
       - name: Build
         run: ./node_modules/.bin/gulp win-arm64
 
+      - name: Package build directory
+        run: |
+          zip -r build.zip build/
+
       - name: release
         uses: softprops/action-gh-release@v1
         with:
           draft: true
           files: |
-            dist/*.exe
-            dist/*.zip
-            dist/*.dmg
-            dist/*.AppImage
-            dist/*.snap
-            dist/*.deb
-            dist/*.rpm
-            dist/*.tar.gz
-            dist/*.yml
-            dist/*.blockmap
+            build.zip  # 上传打包后的文件
+            build/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
