--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Build
         run: ./node_modules/.bin/gulp win-arm64
 
-      - name: Package build directory
-        run: |
-          zip -r build.zip build/
+      # - name: Package build directory
+      #   run: |
+      #     zip -r build.zip build/
 
       - name: release
         uses: softprops/action-gh-release@v1
