--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -37,15 +37,15 @@ jobs:
 
       - name: Package build directory
         run: |
-          zip -r ./build.zip build/
+          zip -r ./build.zip ./build/
 
       - name: release
         uses: softprops/action-gh-release@v1
         with:
           draft: true
           files: |
-            ./build.zip  # 上传打包后的文件
             ./build/*
+            ./release/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
