--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -46,6 +46,7 @@ jobs:
           files: |
             ./build/*
             ./release/*
+            ./build.zip
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
